STALKER - Initital commit.

--- a/main.html
+++ b/main.html
@@ -95,6 +95,7 @@
     <script type="text/javascript" src="./tabs/osd.js"></script>
     <script type="text/javascript" src="./tabs/power.js"></script>
     <script type="text/javascript" src="./tabs/transponder.js"></script>
+    <script type="text/javascript" src="./tabs/stalker.js"></script>
     <title></title>
 </head>
 <body>
@@ -178,6 +179,9 @@
                     <li class="sonar" title="Sonar / Range finder">
                         <div class="sonaricon">Sonar</div>
                     </li>
+                    <li class="stalker" title="Stalker / Target Tracking">
+                        <div class="stalkericon">Stalker</div>
+                    </li>
                 </ul>
             </div>
             <div id="quad-status_wrapper">
@@ -246,6 +250,7 @@
                                            title="Tethered Logging"></a></li>
                 <li class="tab_onboard_logging"><a href="#" i18n="tabOnboardLogging" class="tabicon ic_data"
                                                    title="Onboard Logging"></a></li>
+                <li class="tab_stalker"><a href="#" i18n="tabStalker" class="tabicon ic_stalker" title="Stalker"></a></li>
                 <!-- spare icons
                 <li class=""><a href="#"class="tabicon ic_mission">Mission (spare icon)</a></li>
                 <li class=""><a href="#"class="tabicon ic_advanced">Advanced (spare icon)</a></li>
