--- a/tabs/configuration.html
+++ b/tabs/configuration.html
@@ -473,6 +473,42 @@
                 </div>
             </div>
         </div>
+        <div class="rightWrapper stalker">
+            <div class="gui_box grey">
+                <div class="gui_box_titlebar">
+                    <div class="spacer_box_title" i18n="configurationStalker"></div>
+                </div>
+                <div class="spacer_box">
+                    <div class="note">
+                        <div class="note_spacer">
+                            <p i18n="configurationStalkerHelp"></p>
+                        </div>
+                    </div>
+                    <table cellpadding="0" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th i18n="configurationFeatureEnabled"></th>
+                                <th i18n="configurationFeatureDescription"></th>
+                                <th i18n="configurationFeatureName"></th>
+                            </tr>
+                        </thead>
+                        <tbody class="features stalker">
+                            <!-- table generated here -->
+                        </tbody>
+                    </table>
+                    <div class="number">
+                        <label> <input type="number" name="stalkerTargetDistance" step="1" min="1000" max="6000" />
+                        <span i18n="configurationStalkerTargetDistance"></span>
+                        </label>
+                    </div>
+                    <div class="number">
+                        <label> <input type="number" name="stalkerTargetDeadband" step="1" min="0" max="500" />
+                        <span i18n="configurationStalkerTargetDeadband"></span>
+                        </label>	
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="clear-both"></div>
     </div>
     <div class="content_toolbar">
