--- a/tabs/pid_tuning.html
+++ b/tabs/pid_tuning.html
@@ -208,6 +208,41 @@
                                 <td><input type="number" name="d" step="1" min="0" max="255" /></td>
                             </tr>
                         </table>
+                        <table id="pid_stalker" class="pid_tuning">
+                            <tr>
+                                <th colspan="4">
+                                    <div class="pid_mode" i18n="pidTuningStalker"></div>
+                                </th>
+                            </tr>
+                            <!-- 10 -->
+                            <tr class="ST_AZM">
+                                <td>Azimuth</td>
+                                <td><input type="number" name="p" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="i" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="d" step="1" min="0" max="255" /></td>
+                            </tr>
+                            <!-- 11 -->
+                            <tr class="ST_ELV">
+                                <td>Elevation</td>
+                                <td><input type="number" name="p" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="i" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="d" step="1" min="0" max="255" /></td>
+                            </tr>
+                            <!-- 12 -->
+                            <tr class="ST_DST">
+                                <td>Distance</td>
+                                <td><input type="number" name="p" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="i" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="d" step="1" min="0" max="255" /></td>
+                            </tr>
+                            <!-- 13 -->
+                            <tr class="ST_HDN">
+                                <td>Target Heading</td>
+                                <td><input type="number" name="p" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="i" step="1" min="0" max="255" /></td>
+                                <td><input type="number" name="d" step="1" min="0" max="255" /></td>
+                            </tr>
+                        </table>
                     </div>
                     <div id="pid_accel" class="gui_box grey topspacer pid_tuning">
                         <table id="pid_level" class="pid_tuning">
