--- a/tabs/setup.html
+++ b/tabs/setup.html
@@ -147,6 +147,43 @@
                 </div>
             </div>
             <div class="spacer_left">
+                <div class="gui_box grey">
+                    <div class="gui_box_titlebar">
+                        <div class="spacer_box_title" i18n="initialSetupStalkerHead"></div>
+                    </div>
+                    <div class="spacer_box">
+                        <table width="100%" border="0" cellpadding="0" cellspacing="0" class="cf_table">
+                            <tbody>
+                                <tr>
+                                    <td i18n="stalkerAzimuth"></td>
+                                    <td class="stalkerAzimuth"></td>
+                                </tr>
+                                 <tr>
+                                    <td i18n="stalkerElevation"></td>
+                                    <td class="stalkerElevation"></td>
+                                </tr>
+                                <tr>
+                                    <td i18n="stalkerHeadingAzimuth"></td>
+                                    <td class="stalkerHeadingAzimuth"></td>
+                                </tr>
+                                <tr>
+                                    <td i18n="stalkerHeadingElevation"></td>
+                                    <td class="stalkerHeadingElevation"></td>
+                                </tr>
+                                <tr>
+                                    <td i18n="stalkerAltitude"></td>
+                                    <td class="stalkerAltitude"></td>
+                                </tr>
+                                <tr>
+                                    <td i18n="stalkerDistance"></td>
+                                    <td class="stalkerDistance"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="spacer_left">
                 <div class="gui_box grey instrumentsbox" align="center">
                     <div class="gui_box_titlebar" align="left">
                         <div class="spacer_box_title" i18n="initialSetupInstrumentsHead"></div>
